<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModelDetailPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/detailBookCover"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_margin="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/author_marker"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/detailDatePublished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/date_marker"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/detailPageCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/pages_marker"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/detailBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/title_marker"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/detailSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/subtitle_marker"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/description_marker"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

</ScrollView>