<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bookCover"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:text="@string/title_marker"
            android:textSize="11sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookTitle"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/bookCover"
            android:padding="3dp"
            android:text="@string/author_marker"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/datePublished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bookCover"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/bookCover"
            android:padding="3dp"
            android:text="@string/date_marker"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/pageCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bookCover"
            android:layout_below="@id/bookAuthor"
            android:layout_marginTop="3dp"
            android:padding="3dp"
            android:text="@string/pages_marker"
            android:textSize="11sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>